[metadata]
name = sapphire
version = 0.0.1
author = Ariel Aziernicki
author_email = aziernicki.ariel@proton.me
description = To make data validations easy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/azierariel/sapphire
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
